[package]
name = "ip-api-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["rustmonicon <aqu.de@yandex.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
metadata = { homepage = "https://github.com/rustmonicon/ip-api-wrapper", repository = "https://github.com/rustmonicon/ip-api-wrapper" }
description = "Simple API Wrapper IP-API.com"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
